# SamAttn

./: .gitignore  CMakeLists.txt  README.md  example.py  pyproject.toml  setup.py
benchmarks/: bench_gemm.cu  bench_gemm.py
csrc/bindings/: bindings.cpp
csrc/kernels/: gemm_cute.cu  gemm_cute.cuh
samattn/: __init__.py
